# google_code_jam

./: .gitignore  CMakeLists.txt  Makefile  ReadMe.md
00_default/: CMakeLists.txt  Makefile  problem.cpp  problem.h
00_default_interactive/: .gitignore  Makefile  problem.cpp
00_default_standard/: .gitignore  CMakeLists.txt  Makefile  problem.cpp
2021/2021_Qual_02MoonUmbrella/: problem.cpp
2021/2021_Qual_03ReversortEngineering/: problem.cpp
2021/2021_Qual_05CheatingDetection/: Makefile
2021_Qual_01Reversort/: Makefile  problem.cpp
2021_Qual_05CheatingDetection/: problem.cpp
2021_Qual_05CheatingDetection/scripts/: gen_test.py
2022/01_LetterBlocks/: Makefile
2022/2022_Qual/01_PunchedCards/: problem.cpp
2022/2022_Qual/02_3DPrinting/: problem.cpp
2022/2022_Qual/05_TwistyLittlePassages/: Makefile  problem.cpp
2022/2022_Round1A/01_DoubleOrOne/: Makefile
2022/2022_Round1A/02_EqualSum/: Makefile  problem.cpp
2022/2022_Round1B/02_ControlledInflation/: Makefile  problem.cpp
2022/2022_Round1C/01_LetterBlocks/: .gitignore  CMakeLists.txt
2022_Qual/03_d1000000/: problem.cpp
2022_Qual/04_ChainReaction/: problem.cpp
2022_Qual/05_TwistyLittlePassages/: problem.cpp
2022_Round1A/01_DoubleOrOne/: problem.cpp
2022_Round1B/01_PancakeDeque/: problem.cpp
2022_Round1B/02_ControlledInflation/: problem.cpp
2022_Round1C/01_LetterBlocks/: Makefile  problem.cpp
2023/00_default_standard/: CMakeLists.txt  Makefile  problem.cpp
src/: main_standard.h
